# saitekikuukan

./: CMakeLists.txt  LICENSE  README-JP.md  README.md  test.cpp
diary/: 2025-08-18-eob.md  2025-08-18-push_back.md  2025-08-27-構造化束縛だと速度が出ない.md  2025-09-10-bufferの実装方針転換.md
include/: saitekikuukan.hpp
test/develop-test/: CMakeLists.txt  test.cpp
test/speed-test/: CMakeLists.txt  test.cpp
